MB-54699 : Recreate lcb_Instance upon AUTH error during bucket op

In scenarios where all existing KV nodes get replaced with new nodes in
between bucket ops, we can hit a scenario where lcb instance has no KV
nodes to bootstrap against and consumer's processing gets stuck.

Solution:

Long term solution:
A longer term solution is to hit all lcb instances with no-ops so that
their event loops keep moving forward. This solution, while more clean
needs some architectural changes.

Short term:

Just like for n1ql ops, we will recreate lcb instances and retry the
operation with the recreated instance.

Change-Id: I68f27c76b8563d6204406e17e885a9d7bffb49e0
Reviewed-on: https://review.couchbase.org/c/eventing/+/183427
Well-Formed: Restriction Checker
Tested-by: abhishekjindal <abhishek.jindal@couchbase.com>
Reviewed-by: CI Bot
Reviewed-by: <ankit.prabhu@couchbase.com>